VPC-template/templateSG.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: "Security Groups for FdDashboard environment"

Resources:

  FdDashboardFrontALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: fd-dashboard-front-alb-sg
      GroupDescription: Security group for FdDashboard Front ALB
      VpcId: vpc-04107254f4ec96579

  FdDashboardAPIALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: fd-dashboard-api-alb-sg
      GroupDescription: Security group for FdDashboard API ALB
      VpcId: vpc-04107254f4ec96579

  FdDashboardBastion:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: fd-dashboard-bastion-sg
      GroupDescription: Security group for Bastion EC2 instance
      VpcId: vpc-04107254f4ec96579
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443

  FdDashboardFrontEcsSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: fd-dashboard-front-ecs-sg
      GroupDescription: Security group for FdDashboard Front ECS
      VpcId: vpc-04107254f4ec96579
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443

  FdDashboardAPIEcsSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: fd-dashboard-api-ecs-sg
      GroupDescription: Security group for FdDashboard API ECS
      VpcId: vpc-04107254f4ec96579
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443

  FdDashboardDbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: fd-dashboard-db-sg
      GroupDescription: Security group for FdDashboard DB
      VpcId: vpc-04107254f4ec96579
      SecurityGroupIngress:
        - CidrIp: 10.170.0.0/16
          IpProtocol: tcp
          FromPort: 1433
          ToPort: 1433

Outputs:

  FdDashboardFrontALBSGId:
    Description: Security Group ID of Front ALB
    Value: !Ref FdDashboardFrontALBSG
